bleh I still hate css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Proyecto 1</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <nav class="topbar">
+        <img class="logo" src="images/logo.png" alt="LCSC logo" />
+        <input class="searchbar" type="search" placeholder="Part #/ keyword" />
+        <div class="account">
+          <img class="svg" id="account-svg" src="images/account.svg" alt="Account icon" />
+          <div>
+            <a href="https://passport.lcsc.com/#/login?">Log In</a>
+            <a href="https://passport.lcsc.com/#/register?">Register</a>
+          </div>
+          <div id="accorders">Account & Orders</div>
+        </div>
+        <img class="svg"
+          src="images/shopping-cart.svg"
+          alt="Shopping cart icon"
+        />
+      </nav>
+      <nav class="bottombar">
+        <ul>
+          <li><a href="https://www.lcsc.com/products">All Products</a></li>
+          <li><a href="https://www.lcsc.com/supplier">Manufacturers</a></li>
+          <li><a href="https://www.lcsc.com/bom">BOM Tool</a></li>
+          <li><a href="https://www.lcsc.com/inquiry">RFQ</a></li>
+          <li><span>Popular Products</span></li>
+          <li><a href="https://www.lcsc.com/pcba">PCB/SMT</a></li>
+          <li>
+            <a
+              href="https://www.lcsc.com/customcables?utm_source=customcables&utm_medium=navbar"
+              >Custom Cables</a
+            >
+          </li>
+          <li><a href="https://www.lcsc.com/front-panel">Front Panel</a></li>
+          <li><a href="https://www.lcsc.com/about/company">About LCSC</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
