--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
       <nav class="topbar">
         <img class="logo" src="images/logo.png" alt="LCSC logo" />
         <div class="searchbar">
-          <input  type="search" placeholder="Part #/ keyword" />
-          <button type="submit"><img class="svg" src="images/search-icon.png" alt="Submit"></button>
+          <input type="search" placeholder="Part #/ keyword" />
+          <button type="submit">
+            <img class="svg" src="images/search-icon.png" alt="Submit" />
+          </button>
         </div>
-        
+
         <div class="account">
           <img
             class="svg"
@@ -55,7 +57,6 @@
             <a rel="noopener" href="https://www.lcsc.com/bom">BOM Tool</a>
           </li>
           <li><a rel="noopener" href="https://www.lcsc.com/inquiry">RFQ</a></li>
-          <!-- <li><span>Popular Products</span></li> -->
           <li>
             <a rel="noopener" href="https://www.lcsc.com/pcba">PCB/SMT</a>
           </li>
@@ -77,35 +78,142 @@
             >
           </li>
         </ul>
-        
       </nav>
     </header>
     <main>
       <article class="main-menu">
-        <section>
+        <section class="products">
           <nav>
             <ul>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Capacitors_312.html">Capacitors</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Connectors_365.html">Connectors</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Crystals-Oscillators-Resonators_348.html">Crystals, Oscillators, Resonators</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Diodes_319.html">Diodes</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Embedded-Processors-Controllers_470.html">Embedded Processors & Controllers</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Filters_10991.html">Filters</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Inductors-Coils-Chokes_316.html">Inductors, Coils, Chokes</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Interface_575.html">Interface</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/IoT-Communication-Modules_938.html">IoT/Communication Modules</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Optoelectronics_450.html">Optoelectronics</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Power-Management-PMIC_380.html">Power Management (PMIC)</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Resistors_308.html">Resistors</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Sensors_513.html">Sensors</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Switches_423.html">Switches</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products/Transistors-Thyristors_320.html">Transistors/Thyristors</a></li>
-              <li><a rel="noopener" href="https://www.lcsc.com/products">View All Products</a></li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Capacitors_312.html"
+                  >Capacitors</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Connectors_365.html"
+                  >Connectors</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Crystals-Oscillators-Resonators_348.html"
+                  >Crystals, Oscillators, Resonators</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Diodes_319.html"
+                  >Diodes</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Embedded-Processors-Controllers_470.html"
+                  >Embedded Processors & Controllers</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Filters_10991.html"
+                  >Filters</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Inductors-Coils-Chokes_316.html"
+                  >Inductors, Coils, Chokes</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Interface_575.html"
+                  >Interface</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/IoT-Communication-Modules_938.html"
+                  >IoT/Communication Modules</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Optoelectronics_450.html"
+                  >Optoelectronics</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Power-Management-PMIC_380.html"
+                  >Power Management (PMIC)</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Resistors_308.html"
+                  >Resistors</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Sensors_513.html"
+                  >Sensors</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Switches_423.html"
+                  >Switches</a
+                >
+              </li>
+              <li>
+                <a
+                  rel="noopener"
+                  href="https://www.lcsc.com/products/Transistors-Thyristors_320.html"
+                  >Transistors/Thyristors</a
+                >
+              </li>
+              <li>
+                <a rel="noopener" href="https://www.lcsc.com/products"
+                  >View All Products</a
+                >
+              </li>
             </ul>
           </nav>
         </section>
         <section class="advert">
-          <img src="images/ad.png" alt="Advert for custom cables">
+          <img src="images/ad.png" alt="Advert for custom cables" />
+        </section>
+        <section class="bom">
+          <a rel="noopener" href="https://www.lcsc.com/bom"
+            >Upload a Parts List to Check Pricing & Availability</a
+          >
+        </section>
+        <section>
+          <span>RFQ</span>
+        </section>
+        <section>
+          <a rel="noopener" href="https://assets.lcsc.com/datasheet/szlcsc/Download-ISO9001-Certification.pdf">Quality Management System Certificate</a>
+        </section>
+        <section>
+          <span>560,000 Parts in Stock  </span>
         </section>
       </article>
     </main>
