--- a/index.html
+++ b/index.html
@@ -199,21 +199,33 @@
           </nav>
         </section>
         <section class="advert">
-          <img src="images/ad.png" alt="Advert for custom cables" />
+          <a
+            rel="noopener"
+            href="https://www.lcsc.com/customcables/landingPage?utm_source=customcables&utm_medium=banner"
+            ><img src="images/ad.png" alt="Advert for custom cables"
+          /></a>
         </section>
         <section class="bom">
+          <img src="/images/bom-tool.png" alt="BOM Tool icon" />
           <a rel="noopener" href="https://www.lcsc.com/bom"
             >Upload a Parts List to Check Pricing & Availability</a
           >
         </section>
-        <section>
+        <section class="rfq">
+          <img src="images/rfq.png" alt="FRQ icon"/>
           <span>RFQ</span>
         </section>
-        <section>
-          <a rel="noopener" href="https://assets.lcsc.com/datasheet/szlcsc/Download-ISO9001-Certification.pdf">Quality Management System Certificate</a>
+        <section class="certificate">
+          <img src="images/certificate.png" alt="Certificate icon" />
+          <a
+            rel="noopener"
+            href="https://assets.lcsc.com/datasheet/szlcsc/Download-ISO9001-Certification.pdf"
+            >Quality Management System Certificate</a
+          >
         </section>
-        <section>
-          <span>560,000 Parts in Stock  </span>
+        <section class="stock">
+          <img src="images/stock.png" alt="Stock icon" />
+          <span>560,000 Parts in Stock </span>
         </section>
       </article>
     </main>
