desktop done ig

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           >
         </section>
         <section class="rfq">
-          <img src="images/rfq.png" alt="FRQ icon"/>
+          <img src="images/rfq.png" alt="FRQ icon" />
           <span>RFQ</span>
         </section>
         <section class="certificate">
@@ -228,6 +228,148 @@
           <span>560,000 Parts in Stock </span>
         </section>
       </article>
+      <article class="popular-products">
+        <section class="products-title">
+          <h2>Popular Products</h2>
+        </section>
+        <section class="popular-products-list">
+          <section class="popular-product">
+            <img src="images/XL-1608UBC-04.png" alt="image of XL-1608UBC-04" />
+            <a
+              rel="noopener"
+              href="https://www.lcsc.com/product-detail/LED-Indication-Discrete_XINGLIGHT-XL-1608UBC-04_C965807.html"
+              ><h3 class="product-name">XL-1608UBC-04</h3></a
+            >
+            <p class="manufacturer-name">XINGLIGHT</p>
+            <p class="price">$ 0.0034</p>
+          </section>
+          <section class="popular-product">
+            <img src="images/W25Q16JVSSIQ.png" alt="image of W25Q16JVSSIQ" />
+            <a
+              rel="noopener"
+              href="https://www.lcsc.com/product-detail/NOR-FLASH_Winbond-Elec-W25Q16JVSSIQ_C131025.html"
+              ><h3 class="product-name">W25Q16JVSSIQ</h3></a
+            >
+            <p class="manufacturer-name">Winbond Elec</p>
+            <p class="price">$ 0.238</p>
+          </section>
+          <section class="popular-product">
+            <img
+              src="images/SN74LVC1G125DBVR.png"
+              alt="image of SN74LVC1G125DBVR"
+            />
+            <a
+              rel="noopener"
+              href="https://www.lcsc.com/product-detail/Buffers-Drivers-Receivers-Transceivers_Texas-Instruments-SN74LVC1G125DBVR_C23654.html"
+              ><h3 class="product-name">SN74LVC1G125DBVR</h3></a
+            >
+            <p class="manufacturer-name">Texas Instruments</p>
+            <p class="price">$ 0.058</p>
+          </section>
+          <section class="popular-product">
+            <img src="images/STM32F303CBT6.png" alt="image of STM32F303CBT6" />
+            <a
+              rel="noopener"
+              href="https://www.lcsc.com/product-detail/Microcontrollers-MCU-MPU-SOC_STMicroelectronics-STM32F303CBT6_C108516.html"
+              ><h3 class="product-name">STM32F303CBT6</h3></a
+            >
+            <p class="manufacturer-name">STMicroelectronics</p>
+            <p class="price">$ 1.8613</p>
+          </section>
+          <section class="popular-product">
+            <img src="images/BMI088.png" alt="image of BMI088" />
+            <a
+              rel="noopener"
+              href="https://www.lcsc.com/product-detail/Accelerometers_Bosch-Sensortec-BMI088_C194919.html"
+              ><h3 class="product-name">BMI088</h3></a
+            >
+            <p class="manufacturer-name">Bosch Sensortec</p>
+            <p class="price">$ 2.7387</p>
+          </section>
+          <section class="popular-product">
+            <img src="images/B1601S.png" alt="image of B1601S" />
+            <a
+              rel="noopener"
+              href="https://www.lcsc.com/product-detail/Pulse-Transformers-LAN_CND-tek-B1601S_C510548.html"
+              ><h3 class="product-name">B1601S</h3></a
+            >
+            <p class="manufacturer-name">CND-tek</p>
+            <p class="price">$ 0.2005</p>
+          </section>
+          <section class="popular-product">
+            <img
+              src="images/ESP32-WROOM-32E-N8.png"
+              alt="image of ESP32-WROOM-32E-N8"
+            />
+            <a
+              rel="noopener"
+              href="https://www.lcsc.com/product-detail/WiFi-Modules_Espressif-Systems-ESP32-WROOM-32E-N8_C701342.html"
+              ><h3 class="product-name">ESP32-WROOM-32E-N8</h3></a
+            >
+            <p class="manufacturer-name">Espressif Systems</p>
+            <p class="price">$ 4.8491</p>
+          </section>
+          <section class="popular-product">
+            <img
+              src="images/ADM2582EBRWZ-REEL7.png"
+              alt="image of ADM2582EBRWZ-REEL7"
+            />
+            <a
+              rel="noopener"
+              href="https://www.lcsc.com/product-detail/Isolated-RS-485-422-Transceivers_Analog-Devices-ADM2582EBRWZ-REEL7_C39494.html"
+              ><h3 class="product-name">ADM2582EBRWZ-REEL7</h3></a
+            >
+            <p class="manufacturer-name">Analog Devices</p>
+            <p class="price">$ 5.6397</p>
+          </section>
+          <section class="popular-product">
+            <img src="images/3296W-1-502LF.png" alt="image of 3296W-1-502LF" />
+            <a
+              rel="noopener"
+              href="https://www.lcsc.com/product-detail/Potentiometers-Variable-Resistors_BOURNS-3296W-1-502LF_C60620.html"
+              ><h3 class="product-name">3296W-1-502LF</h3></a
+            >
+            <p class="manufacturer-name">BOURNS</p>
+            <p class="price">$ 0.6411</p>
+          </section>
+          <section class="popular-product">
+            <img
+              src="images/R-RJ45R08P-B000.png"
+              alt="image of R-RJ45R08P-B000"
+            />
+            <a
+              rel="noopener"
+              href="https://www.lcsc.com/product-detail/Ethernet-Connectors-Modular-Connectors-RJ45-RJ11_Ckmtw-Shenzhen-Cankemeng-R-RJ45R08P-B000_C386756.html"
+              ><h3 class="product-name">R-RJ45R08P-B000</h3></a
+            >
+            <p class="manufacturer-name">Ckmtw(Shenzhen Cankemeng)</p>
+            <p class="price">$ 0.3688</p>
+          </section>
+        </section>
+      </article>
     </main>
+    <footer>
+      <h1>LCSC - Global Electronic Components Distributor</h1>
+      <div>
+        <h2>4,600,000<sup>+</sup></h2>
+        <p>LCSCers</p>
+      </div>
+      <div>
+        <h2>16,000<sup>+</sup></h2>
+        <p>Daily Orders</p>
+      </div>
+      <div>
+        <h2>2600<sup>+</sup></h2>
+        <p>Manufacturers</p>
+      </div>
+      <div>
+        <h2>560,000<sup>+</sup></h2>
+        <p>SKUs</p>
+      </div>
+      <div>
+        <h2>130,000<sup>m<sup>2</sup></sup></h2>
+        <p>In-stock Warehouses</p>
+      </div>
+    </footer>
   </body>
 </html>
