please for the love of god tell me im done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
             <img class="svg" src="images/search-icon.png" alt="Submit" />
           </button>
         </div>
-
+        <img
+          class="svg"
+          id="burger-menu"
+          id="shoppingcart-svg"
+          src="images/burger-menu.svg"
+          alt="Shopping cart icon"
+        />
         <div class="account">
           <img
             class="svg"
@@ -77,6 +83,7 @@
               >About LCSC</a
             >
           </li>
+          <li></li>
         </ul>
       </nav>
     </header>
@@ -367,7 +374,9 @@
         <p>SKUs</p>
       </div>
       <div>
-        <h2>130,000<sup>m<sup>2</sup></sup></h2>
+        <h2>
+          130,000<sup>m<sup>2</sup></sup>
+        </h2>
         <p>In-stock Warehouses</p>
       </div>
     </footer>
